[workspace.package]
version = "0.1.0"
edition = "2024"
description = "A Rust runtime for Binmod WebAssembly modules"
repository = "https://github.com/binmod-io/rust-runtime"
license = "MIT"
readme = "README.md"

[workspace]
resolver = "2"
members = [
    "binmod-macros",
    "binmod-core",
    "binmod",
]

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
async-trait = { version = "0.1.89" }
futures = { version = "0.3.31" }
thiserror = { version = "2.0.17" }
anyhow = { version = "1.0.100" }
mea = { version = "0.5.1" }