[package]
name = "binmod-core"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
mea = { workspace = true }
wasmtime = { version = "39.0.1", features = ["winch", "async"] }
wasmtime-wasi = "39.0.1"

