[package]
name = "binmod"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
binmod-macros = { path = "../binmod-macros", version = "0.0.0" }
binmod-core = { path = "../binmod-core", version = "0.0.0" }

async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
